@@ -13,6 +13,8 @@ Version 1.7.5+svn:
      and '[inspect]' tag)
  * WML engine:
    * Fix silent=yes for objectives
+   * Allow [story] [part] blocks to specify the title box alignment
+     with title_alignment=
  * Miscellaneous and bugfixes:
    * Fix broken "Skip Ai moves" option.
    * Changed upload log format and defaulted the new uploader.
